<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Feedient</string>
    <string name="Login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="choice_remove">Remove</string>
    <string name="choice_cancel">Cancel</string>

    <string name="dialog_remove_user_provider_message">Are you sure you want to remove this provider?</string>
    <string name="dialog_remove_user_provider_title">Delete Confirmation</string>
    <string name="dialog_txt_choose_provider">Choose A Provider</string>
    <string name="dialog_sign_out_title">Sign out confirmation</string>
    <string name="dialog_sign_out_message">Are you sure you wish to sign out?</string>
    <string name="choice_confirm">Yes</string>
    <string name="drawer_add_provider_title">Add User Provider</string>
    <string name="drawer_add_provider_icon">{fa-plus}</string>
    <string name="drawer_logout_icon">{fa-sign-out}</string>
    <string name="drawer_logout_title">Sign out</string>
    <string name="feed_item_action_comment">{fa-comment}</string>
    <string name="dialog_compose_icon_select_provider">{fa-caret-down}</string>
    <string name="dialog_compose_icon_attach_picture">{fa-camera}</string>
    <string name="dialog_compose_icon_send">{fa-send}</string>
    <string name="dialog_select_user_provider_go_back">Go Back.</string>
    <string name="dialog_select_user_provider_go_back_icon">{fa-arrow-left}</string>
    <string name="compose_message_hint">Write something ...</string>

    <!-- Nav Drawer Panel Items -->
    <string-array name="nav_drawer_panel_items">
        <item>Feed</item>
        <item>Inbox</item>
        <item>Analytics</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_menu_items">
        <item>Settings</item>
        <item>Sign out</item>
    </string-array>
</resources>
