<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer_layout">

    <!-- Main View -->
    <uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list"
            android:divider="@null">
        </ListView>
    </uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>

    <!-- Drawer Content -->
    <!-- Drawer View has to have android:layout_gravity="start" set -->
    <!-- Drawer should be max 320 -->
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_height="match_parent"
        android:layout_width="@dimen/feed_item_drawer"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:background="@color/drawer"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <!-- Framelayout to display Fragments -->
        <FrameLayout
            android:id="@+id/frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Providers List -->
        <ListView
            android:id="@+id/drawer_provider_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"/>

        <!-- Add User Provider -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/drawer_left_right"
            android:paddingRight="@dimen/drawer_left_right"
            android:paddingTop="@dimen/drawer_top_bot"
            android:paddingBottom="@dimen/drawer_top_bot"
            android:onClick="onClickAddUserProvider">

            <!-- Icon -->
            <IconTextView
                android:id="@+id/txt_provider_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/drawer_item_icon"
                android:textColor="@color/drawer_item_icon"
                android:text="@string/drawer_add_provider_icon"/>

            <!-- Title -->
            <TextView
                android:id="@+id/txt_provider_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_add_provider_title"
                android:textColor="@color/drawer_item_title"
                android:typeface="sans"
                android:gravity="center"
                android:textSize="@dimen/drawer_item_title"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/drawer_item_title_marg"/>

        </LinearLayout>

        <!-- Logout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/drawer_left_right"
            android:paddingRight="@dimen/drawer_left_right"
            android:paddingTop="@dimen/drawer_top_bot"
            android:paddingBottom="@dimen/drawer_top_bot"
            android:onClick="onClickLogout">

            <!-- Icon -->
            <IconTextView
                android:id="@+id/txt_logout_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/drawer_item_icon"
                android:textColor="@color/drawer_item_icon"
                android:text="@string/drawer_logout_icon"/>

            <!-- Title -->
            <TextView
                android:id="@+id/txr_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drawer_logout_title"
                android:textColor="@color/drawer_item_title"
                android:typeface="sans"
                android:gravity="center"
                android:textSize="@dimen/drawer_item_title"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/drawer_item_title_marg"/>

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
