<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_compose">

    <RelativeLayout
        android:id="@+id/container_header"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/dialog_compose_header_pad_left_right"
        android:paddingRight="@dimen/dialog_compose_header_pad_left_right"
        android:paddingTop="@dimen/dialog_compose_header_pad_top_bot"
        android:paddingBottom="@dimen/dialog_compose_header_pad_top_bot"
        android:background="#efefef">

        <!-- Provider Selector Container -->
        <LinearLayout
            android:id="@+id/container_selected_providers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"/>

        <!-- Select Providers Icon -->
        <IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_compose_icon_select_provider"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dialog_compose_select_providers"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <!-- Divider -->
    <ImageView
        android:id="@+id/divider_header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#aa000000"
        android:layout_below="@id/container_header"/>

    <!-- Message composing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dialog_compose_message_pad"
        android:layout_below="@id/divider_header"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:gravity="top|left"/>
    </LinearLayout>

    <!-- Footer -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_compose_footer"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/dialog_compose_footer_pad_left_right"
        android:paddingRight="@dimen/dialog_compose_footer_pad_left_right"
        android:paddingBottom="@dimen/dialog_compose_footer_pad_top_bot"
        android:paddingTop="@dimen/dialog_compose_footer_pad_top_bot">

        <!-- Attach Picture -->
        <IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_compose_icon_attach_picture"
            android:textColor="@color/dialog_compose_attach_picture"
            android:textSize="@dimen/dialog_compose_attach_picture"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <!-- Remaining Count -->
            <LinearLayout
                android:id="@+id/container_remaining_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp">

                <IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="{fa-twitter}"
                    android:textSize="@dimen/dialog_compose_remaining_count_icon"
                    android:layout_marginRight="4dp"/>

                <TextView
                    android:id="@+id/txt_remaining_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dialog_compose_remaining_count"
                    android:text="50"/>
            </LinearLayout>

            <!-- Send -->
            <IconTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_compose_icon_send"
                android:textSize="@dimen/dialog_compose_send"
                android:textColor="@color/dialog_compose_send"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>